--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #f5f5f5;
+  position: sticky;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -14,4 +15,14 @@
 
 .nav-item{
   padding-left: 20px;
+}
+
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+body {
+  margin-top: 56px; /* Adjust the margin-top based on your navbar height */
 }
